<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woofwalk1"
    tools:context=".UI_Controllers.DogWalkerSignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/walker_ET_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:elevation="@dimen/elevation"
            android:fontFamily="@font/alfaslabone_regular"
            android:shadowColor="@color/amber"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="48"
            android:text="@string/hi_dog_walker"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/walker_ET_id"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:background="@color/orange_100"
            android:elevation="24dp"
            android:fontFamily="@font/alfaslabone"
            android:hint="@string/id"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walker_ET_title" />

        <EditText
            android:id="@+id/walker_ET_firstname"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/orange_100"
            android:elevation="24dp"
            android:fontFamily="@font/alfaslabone"
            android:hint="@string/first_name"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walker_ET_id" />

        <EditText
            android:id="@+id/walker_ET_lastname"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/orange_100"
            android:elevation="24dp"
            android:fontFamily="@font/alfaslabone"
            android:hint="@string/last_name"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walker_ET_firstname" />

        <EditText
            android:id="@+id/walker_ET_phone"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@color/orange_100"
            android:elevation="24dp"
            android:fontFamily="@font/alfaslabone"
            android:hint="@string/phone_number"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/walker_ET_lastname" />

        <Button
            android:id="@+id/walker_BTN_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="460dp"
            android:backgroundTint="@color/amber_200"
            android:fontFamily="@font/alfaslabone_regular"
            android:text="@string/lets_go"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:icon="@drawable/pow"
            app:iconGravity="start"
            app:iconPadding="16dp"
            app:iconSize="30dp"
            app:iconTintMode="multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>