<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woofwalk1"
    android:orientation="vertical"
    tools:context=".UI_Controllers.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:elevation="24dp"
                android:fontFamily="@font/alfaslabone_regular"
                android:shadowColor="@color/amber"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="32"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_TIET_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange_100"
                    android:fontFamily="@font/alfaslabone_regular"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_TIET_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange_100"
                    android:fontFamily="@font/alfaslabone_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_BTN_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/amber_200"
                android:fontFamily="@font/alfaslabone_regular"
                android:text="@string/lets_go"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:icon="@drawable/pow"
                app:iconGravity="start"
                app:iconPadding="16dp"
                app:iconSize="30dp"
                app:iconTintMode="multiply"
                app:strokeWidth="4dp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>